# Cloudlet-AI-Backend

./: .gitignore  README.md  main.py  pyproject.toml  serial_data.py  serial_monitor.py
API/: api.py
Data/: data.pickle  data_controller.py
ML/: ml_controller.py  model_converter.py  model_trainer.py
Serial/: serial_controller.py
