[tool.poetry]
name = "cloudlet-ai-backend"
version = "0.1.0"
description = ""
authors = ["Oliver Hulland <olihulland@gmail.com>"]
readme = "README.md"
packages = [{include = "cloudlet_ai_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
pyserial = "^3.5"

[tool.poetry.scripts]
start = "cloudlet_ai_backend.main:start_dev"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
